--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>方晓鹏</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
+    <meta name="screen-orientation" content="portrait" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="true">
+    <title>方晓鹏的个人主页</title>
+    <meta name="Keywords" content="方晓鹏,鹏大帅，鹏超帅,方晓鹏的主页,方晓鹏的博客,Android，Web前端" />
+    <meta name="Description" content="请叫我鹏超帅！" />
 </head>
+
 <body>
-我叫方晓鹏，英文名Aili，软件工程师，撸安卓和前端，大家都叫我鹏超帅。
+    <script>
+        // window.location.href='./native/index.html';
+        // window.location.href='./native/html/main-template.html';
+        window.location.href='./native/html/main-native.html';
+    </script>
 </body>
 </html>
