解决工程目录调整导致的资源文件加载失败问题

--- a/native/index.html
+++ b/native/index.html
@@ -6,11 +6,11 @@
     <title>方晓鹏的个人主页</title>
     <meta name="Keywords" content="方晓鹏,鹏大帅，鹏超帅,方晓鹏的主页,方晓鹏的博客,Android，Web前端" />
     <meta name="Description" content="请叫我鹏超帅！" />
-    <link href="../css/header.css" rel="stylesheet">
-    <link href="../css/aside.css" rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
-    <link href="../css/footer.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../images/page_icon.ico">
+    <link href="./css/header.css" rel="stylesheet">
+    <link href="./css/aside.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
+    <link href="./css/footer.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./images/page_icon.ico">
     <!-- 适应移动端start -->
     <!-- width viewport 宽度(数值/device-width)
         height viewport 高度(数值/device-height)
@@ -78,7 +78,7 @@
 
     <aside class="body-aside">
         <div class="aside-code">
-            <img class="aside-code-img" src="./images/photo.jpg" />
+            <img class="aside-code-img" src="./images/code-wechat.jpg" />
             <p class="aside-code-lable">扫一扫加我好友</p>
         </div>
     </aside>
@@ -167,8 +167,7 @@
             <p class="footer-copyright">Copyright &copy; 2018 fxp</p>
         </footer>
     </div>
-    <script src="./js/main.js"></script>
-    <script src="./js/canvas-nest.js"></script>
+    <script src="./lib/canvas-nest.js"></script>
     <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2155453"></script>
 </body>
 
