--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <script>
-        // window.location.href='./native/index.html';
+        window.location.href='./native/index.html';
         // window.location.href='./native/html/main-template.html';
-        window.location.href='./native/html/main-native.html';
+        // window.location.href='./native/html/main-native.html';
     </script>
 </body>
 </html>
