--- a/native/index.html
+++ b/native/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>方晓鹏的个人主页</title>
+    <title>方晓鹏</title>
     <meta name="Keywords" content="方晓鹏,鹏大帅，鹏超帅,方晓鹏的主页,方晓鹏的博客,Android，Web前端" />
     <meta name="Description" content="请叫我鹏超帅！" />
     <link href="./css/header.css" rel="stylesheet">
