--- a/native/index.html
+++ b/native/index.html
@@ -144,6 +144,23 @@
                 <a href="http://blog.csdn.net/fxp850899969">查看更多</a>
             </h3>
         </article>
+        <article class="main-message">
+            <h2>留言板</h2>
+            <div>
+
+            </div>
+            <ul>
+                <li>
+
+                </li>
+            </ul>
+            <div>
+                <textarea class="write-msg" placeholder="来说两句吧..." maxLength="60"></textarea>
+            </div>
+            <div class="main-message_publish">
+                <label>发表留言</label>
+            </div>
+        </article>
         <article>
             <!-- UY BEGIN -->
             <div id="uyan_frame"></div>
