--- a/native/index.html
+++ b/native/index.html
@@ -146,16 +146,26 @@
         </article>
         <article class="main-message">
             <h2>留言板</h2>
-            <div>
-
+            <div class="msg-head">
+                <div class="msg-title">
+                    <div class="line-v"></div>
+                    <label>热门留言</label>
+                </div>
+                <div class="msg-desc">
+                    <label class="desc-num">48</label>
+                    <label>人参与，</label>
+                    <label class="desc-num">2</label>
+                    <label>人留言</label>
+                </div>                            
             </div>
+            <div class="line-h"></div>
             <ul>
                 <li>
 
                 </li>
             </ul>
-            <div>
-                <textarea class="write-msg" placeholder="来说两句吧..." maxLength="60"></textarea>
+            <div class="main-message_input">
+                <textarea placeholder="来说两句吧..." maxLength="60"></textarea>
             </div>
             <div class="main-message_publish">
                 <label>发表留言</label>
