--- a/native/index.html
+++ b/native/index.html
@@ -161,7 +161,25 @@
             <div class="line-h"></div>
             <ul>
                 <li>
-
+                    <div>
+                        <img class="msg-user-photo" src="../native/images/photo_default_man.png">
+                        <div class="msg-user-info">
+                            <div>
+                                <span>卓诺不迷路</span>
+                                <div class="f_r">
+                                    <img src="../native/images/icon_like.png">
+                                    <label>45</label>
+                                    <img src="../native/images/icon_comment.png">
+                                    <label>0</label>
+                                </div>
+                            </div>
+                            <div>
+                                <label>2018年7月17日 下午2:15 </label>
+                                <label>   深圳市·公安局 </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="msg-content">这个沙发我坐定了，哈哈哈</div>
                 </li>
             </ul>
             <div class="main-message_input">
