--- a/native/index.html
+++ b/native/index.html
@@ -159,8 +159,8 @@
                 </div>                            
             </div>
             <div class="line-h"></div>
-            <ul>
-                <li>
+            <ul class="msg-ul-outer">
+                <li class="msg-li-outer">
                     <div>
                         <img class="msg-user-photo" src="../native/images/photo_default_man.png">
                         <div class="msg-user-info">
@@ -180,6 +180,47 @@
                         </div>
                     </div>
                     <div class="msg-content">这个沙发我坐定了，哈哈哈</div>
+                </li>
+                <li class="msg-li-outer">
+                    <div>
+                        <img class="msg-user-photo" src="../native/images/photo_default_man.png">
+                        <div class="msg-user-info">
+                            <div>
+                                <span>哥尔·D·罗杰</span>
+                                <div class="f_r">
+                                    <img src="../native/images/icon_like.png">
+                                    <label>3</label>
+                                    <img src="../native/images/icon_comment.png">
+                                    <label>2</label>
+                                </div>
+                            </div>
+                            <div>
+                                <label>2018年7月17日 下午2:18 </label>
+                                <label>   伟大航路·罗格镇 </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="msg-content">想要我的财宝吗？想要的话可以全部给你，去找吧！我把所有财宝都放在那里</div>
+                    <ul class="msg-ul-inner">
+                        <li class="msg-li-inner">
+                            <div>
+                                <div class="line-inner-v"></div>
+                                <label>卓诺不迷路</label>
+                                <span>回复</span>
+                                <label>哥尔·D·罗杰</label>：
+                                <span>受尽苦难而不厌，此乃修罗之道</span>
+                            </div>
+                        </li>
+                        <li class="msg-li-inner">
+                            <div>
+                                <div class="line-inner-v"></div>
+                                <label>哥尔·D·罗杰</label>
+                                <span>回复</span>
+                                <label>卓诺不迷路</label>：
+                                <span>世代传承的意志，时代的变迁，人的梦想，这些都是无法阻止的</span>
+                            </div>
+                        </li>
+                    </ul>
                 </li>
             </ul>
             <div class="main-message_input">
