增加留言板模块

--- a/native/html/main-native.html
+++ b/native/html/main-native.html
@@ -64,6 +64,8 @@
 
         <article class="main-blog"></article>
 
+        <article class="main-message"></article>
+
         <article>
             <!-- UY BEGIN -->
             <div id="uyan_frame"></div>
