--- a/native/index.html
+++ b/native/index.html
@@ -85,7 +85,10 @@
 
     <main class="body-main">
         <article class="main-project">
-            <h2>开源项目</h2>
+            <div class="module">
+                <img class="module-icon" src="../native/images/icon_github.png">
+                <span class="module-title">开源项目</span>
+            </div>
             <ul>
                 <li>
                     <section>
@@ -109,7 +112,10 @@
             </ul>
         </article>
         <article class="main-blog">
-            <h2>博客文章</h2>
+            <div class="module">
+                <img class="module-icon" src="../native/images/icon_blog.png">
+                <span class="module-title">博客文章</span>
+            </div>
             <ul>
                 <li>
                     <section>
@@ -145,7 +151,10 @@
             </h3>
         </article>
         <article class="main-message">
-            <h2>留言板</h2>
+            <div class="module">
+                <img class="module-icon" src="../native/images/icon_msg_board.png">
+                <span class="module-title">留言板</span>
+            </div>
             <div class="msg-head">
                 <div class="msg-title">
                     <div class="line-v"></div>
