--- a/native/index.html
+++ b/native/index.html
@@ -262,8 +262,24 @@
             <p class="footer-copyright">Copyright &copy; 2018 fxp</p>
         </footer>
     </div>
-    <script src="./lib/canvas-nest.js"></script>
-    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2155453"></script>
+    <script>
+        var screen_big = window.matchMedia('(min-width:1200px)');
+        var screen_midle = window.matchMedia('(min-width:992px)');
+        var screen_small = window.matchMedia('(min-width:768px)');
+        var screen_tiny = window.matchMedia('(max-width:768px)');
+        if(screen_big.matches) {
+            console.log("大屏幕(>=1200)");
+            document.write("<script type='text/javascript' src='./lib/canvas-nest.js'/><\/script>");
+        }else if(screen_midle.matches){
+            console.log("中等屏幕(>=992&<=1200)");
+            document.write("<script type='text/javascript' src='./lib/canvas-nest.js'/><\/script>");
+        }else if(screen_small.matches){
+            console.log("小屏幕(>=768&<=992)");
+            document.write("<script type='text/javascript' src='./lib/canvas-nest.js'/><\/script>");
+        }else{
+            console.log("超小屏幕(<=768)");
+        }
+    </script>
 </body>
 
 </html>
